# PapayaStore

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  pyproject.toml  pyrightconfig.json  requirements.md  test_backend.py
src/: Bootstrapper.cpp  Bootstrapper.hpp  main.cpp  main_oop.cpp
src/bindings/: bindings.hpp  module.cpp  python_bindings.cpp
src/bindings/admin/: database_admin_binding.cpp
src/bindings/common/: entidad_base_binding.cpp  header_file_binding.cpp
src/bindings/context/: papaya_context.cpp  papaya_context.hpp  papaya_context_binding.cpp
src/bindings/database/: init_database.hpp  init_database_binding.cpp
src/bindings/entities/: cliente_binding.cpp  producto_binding.cpp  proveedor_binding.cpp  tienda_binding.cpp  transaccion_binding.cpp
src/bindings/repositories/: cliente_repository_binding.cpp  producto_repository_binding.cpp  proveedor_repository_binding.cpp  transaccion_repository_binding.cpp
src/domain/: FSCtl.h  FSCtl.hpp  HeaderFile.hpp  Utils.hpp  constants.cpp  constants.hpp
src/domain/datasource/: DB.datasource.hpp
src/domain/entities/: ArchivoStats.hpp  entidad.entity.cpp  entidad.entity.hpp  usuario.entity.hpp
src/domain/entities/cliente/: Cliente.entity.cpp  Cliente.entity.hpp
src/domain/entities/producto/: producto.entity.cpp  producto.entity.hpp
src/domain/entities/proveedor/: Proveedor.entity.cpp  Proveedor.entity.hpp
src/domain/entities/tienda/: tienda.entity.cpp  tienda.entity.hpp
src/domain/entities/transaccion/: transaccion.entity.cpp  transaccion.entity.hpp
src/domain/producto/: producto.h
src/domain/repositories/: AppRepositories.hpp  IClienteRepository.hpp  IDatabaseAdmin.hpp  IProductoRepository.hpp  IProveedorRepository.hpp  ITransaccionRepository.hpp
src/domain/utils/: utils.cpp  utils.hpp
src/infrastructure/datasource/: EntityTraits.hpp  FSBaseRepository.hpp  FSClienteRepository.hpp  FSDB.datasource.impl.cpp  FSDB.datasoure.impl.hpp  FSDatabaseAdmin.cpp  FSDatabaseAdmin.hpp  FSProductoRepository.hpp  FSProveedorRepository.hpp  FSTransaccionRepository.hpp
src/infrastructure/datasource/admin/: FSDatabaseAdmin.cpp  FSDatabaseAdmin.hpp
src/infrastructure/datasource/cliente/: FSClienteRepository.cpp  FSClienteRepository.hpp
src/infrastructure/datasource/producto/: FSProductoRepository.cpp  FSProductoRepository.hpp
src/infrastructure/datasource/proveedor/: FSProveedorRepository.cpp  FSProveedorRepository.hpp
src/infrastructure/datasource/transaccion/: FSTransaccionRepository.cpp  FSTransaccionRepository.hpp
src/presentation/: CLI.cpp  CLI.h  CLI.hpp  CliUtils.cpp  CliUtils.hpp  HeaderFile.hpp  Menu.hpp  MenuActualizar.h  MenuActualizar.hpp  MenuClientes.cpp  MenuClientes.hpp  MenuProductos.cpp  MenuProductos.hpp  MenuProveedores.hpp  MenuReportes.cpp  MenuReportes.hpp  MenuTienda.cpp  MenuTienda.h  MenuTienda.hpp  MenuTransacciones.hpp  UI.h  UI.hpp
src/presentation/Menu/: Menu.cpp  Menu.hpp
src/presentation/Menu/MainMenu/: MainMenu.cpp  MainMenu.hpp
src/presentation/Menu/MenuClientes/: MenuClientes.cpp  MenuClientes.hpp
src/presentation/Menu/MenuProductos/: MenuProductos.cpp  MenuProductos.hpp
src/presentation/Menu/MenuProveedores/: MenuProveedores.cpp  MenuProveedores.hpp
src/presentation/Menu/MenuReportes/: MenuReportes.cpp  MenuReportes.hpp
src/presentation/Menu/MenuTienda/: MenuTienda.cpp  MenuTienda.hpp
src/presentation/Menu/MenuTransacciones/: MenuTransacciones.cpp  MenuTransacciones.hpp
src/presentation/cli/: CliUtils.cpp
src/presentation/cli/Menu/MainMenu/: MainMenu.cpp  MainMenu.hpp
src/presentation/cli/Menu/MenuClientes/: MenuClientes.cpp  MenuClientes.hpp
src/presentation/cli/Menu/MenuProductos/: MenuProductos.cpp  MenuProductos.hpp
src/presentation/cli/Menu/MenuProveedores/: MenuProveedores.cpp  MenuProveedores.hpp
src/presentation/cli/Menu/MenuReportes/: MenuReportes.hpp
src/presentation/cli/Menu/MenuTransacciones/: MenuTransacciones.cpp  MenuTransacciones.hpp
src/presentation/web/: main.py  router.py
src/presentation/web/components/: appbar.py  sidebar.py
src/presentation/web/views/: clients.py  dashboard.py  products.py  providers.py  settings.py  transactions.py
src/scripts/: __init__.py
typings/: papaya_backend.pyi
webhook/: package.json  pnpm-lock.yaml
webhook/netlify/functions/notifier/: notifier.ts
webhook/src/: app.ts
webhook/src/interfaces/: github-push.interface.ts
webhook/src/presentation/github/: controller.ts
webhook/src/presentation/services/: discord.service.ts  github.service.ts
