[project]
name = "papaya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]>=0.84.0",
    "pybind11>=3.0.4",
]

[project.scripts]
devtools = "scripts:main"
gen-stubs = "scripts:gen_stubs"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "scripts"

[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
    "pybind11-stubgen>=2.5.5",
    "pyright>=1.1.408",
]
